objects/SGR_Tier_Rate_Result__c.object
<CustomObject>
    <fields>
        <fullName>ACA_Fees__c</fullName>
        <label>ACA Fees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Premium__c</fullName>
        <label>Gross Premium</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Type_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Type Result</label>
        <referenceTo>SGR_Rate_Type_Result__c</referenceTo>
        <relationshipLabel>Tier Rate Results</relationshipLabel>
        <relationshipName>Tier_Rate_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Tier Rate Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tier Rate Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tier Rate Results</pluralLabel>
    <recordTypes>
        <fullName>Tier_Rate_Result</fullName>
        <active>true</active>
        <label>Tier Rate Result</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>